// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container view Renders a spinner if data is loading 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
  >
    <svg
      class="PodBrowser-loading-indicator"
      viewBox="22 22 44 44"
    >
      <circle
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Container view Renders a table view without data 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-page-header PodBrowser-files-container-header"
  >
    <h1
      class="PodBrowser-page-header__title"
    >
      Files
    </h1>
    <div
      class="PodBrowser-page-header__content"
    />
    <div
      class="PodBrowser-page-header__toolbar"
    />
  </div>
  <div
    class="PodBrowser-drawer-container"
  >
    <div
      class="PodBrowser-drawer-container__content"
    >
      <div
        class="PodBrowser-sub-header"
      >
        <div
          class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
        >
          <svg
            class="PodBrowser-loading-indicator"
            viewBox="22 22 44 44"
          >
            <circle
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
        <div
          class="PodBrowser-actions-container"
        >
          <a
            class="PodBrowser-page-header__action"
            data-testid="folder-details-button"
            href="/resource/[iri]?action=details&resourceIri="
          >
            Folder Details
          </a>
          <button
            class="PodBrowser-page-header__action"
            data-testid="add-folder-button"
            type="button"
          >
            Create Folder
          </button>
          <label
            class="PodBrowser-page-header__action"
            data-testid="upload-file-button"
            for="upload-file-input"
            tabindex="0"
          >
            Upload File
            <input
              data-testid="upload-file-input"
              id="upload-file-input"
              style="display: none;"
              type="file"
            />
          </label>
        </div>
      </div>
      <table
        class="PodBrowser-table"
        role="table"
      >
        <thead
          class="PodBrowser-table__header"
        >
          <tr
            class="PodBrowser-table__header-row"
            role="row"
          >
            <td
              class="PodBrowser-table__header-cell PodBrowser-table__header-cell--align-center PodBrowser-table__header-cell--width-preview"
              colspan="1"
              role="columnheader"
            >
                
            </td>
            <td
              class="PodBrowser-table__header-cell PodBrowser-table__header-cell--align-center PodBrowser-table__header-cell--width-preview"
              colspan="1"
              role="columnheader"
            >
                
            </td>
            <td
              class="PodBrowser-table__header-cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              File 
            </td>
            <td
              class="PodBrowser-table__header-cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              Type 
            </td>
          </tr>
        </thead>
        <tbody
          class="PodBrowser-table__body"
          role="rowgroup"
        >
          <tr
            class="PodBrowser-table__body-row"
          >
            <td
              class="PodBrowser-table__body-cell"
              rowspan="3"
            >
              No resources were found within this container.
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <section
      class="PodBrowser-drawer"
    >
      <div
        class="PodBrowser-drawer__content"
      >
        <div
          class="PodBrowser-drawer__content-wrapper"
        >
          <div
            class="PodBrowser-drawer__article"
          >
            <button
              class="PodBrowser-button PodBrowser-button--text"
            >
              <span
                class="PodBrowser-icon-cancel"
              />
               Close
            </button>
          </div>
          <section
            class="PodBrowser-centeredSection"
          >
            <h3
              class="PodBrowser-content-h3"
              title=""
            >
              null
            </h3>
          </section>
          <hr
            class="PodBrowser-root"
          />
          <div
            class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
          >
            <svg
              class="PodBrowser-loading-indicator"
              viewBox="22 22 44 44"
            >
              <circle
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Container view Renders a table with data 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-page-header PodBrowser-files-container-header"
  >
    <h1
      class="PodBrowser-page-header__title"
    >
      Files
    </h1>
    <div
      class="PodBrowser-page-header__content"
    />
    <div
      class="PodBrowser-page-header__toolbar"
    />
  </div>
  <div
    class="PodBrowser-drawer-container"
  >
    <div
      class="PodBrowser-drawer-container__content"
    >
      <div
        class="PodBrowser-sub-header"
      >
        <div
          class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
        >
          <svg
            class="PodBrowser-loading-indicator"
            viewBox="22 22 44 44"
          >
            <circle
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
        <div
          class="PodBrowser-actions-container"
        >
          <a
            class="PodBrowser-page-header__action"
            data-testid="folder-details-button"
            href="/resource/[iri]?action=details&resourceIri="
          >
            Folder Details
          </a>
          <button
            class="PodBrowser-page-header__action"
            data-testid="add-folder-button"
            type="button"
          >
            Create Folder
          </button>
          <label
            class="PodBrowser-page-header__action"
            data-testid="upload-file-button"
            for="upload-file-input"
            tabindex="0"
          >
            Upload File
            <input
              data-testid="upload-file-input"
              id="upload-file-input"
              style="display: none;"
              type="file"
            />
          </label>
        </div>
      </div>
      <table
        class="PodBrowser-table"
        role="table"
      >
        <thead
          class="PodBrowser-table__header"
        >
          <tr
            class="PodBrowser-table__header-row"
            role="row"
          >
            <td
              class="PodBrowser-table__header-cell PodBrowser-table__header-cell--align-center PodBrowser-table__header-cell--width-preview"
              colspan="1"
              role="columnheader"
            >
                
            </td>
            <td
              class="PodBrowser-table__header-cell PodBrowser-table__header-cell--align-center PodBrowser-table__header-cell--width-preview"
              colspan="1"
              role="columnheader"
            >
                
            </td>
            <td
              class="PodBrowser-table__header-cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              File 
            </td>
            <td
              class="PodBrowser-table__header-cell"
              colspan="1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              Type 
            </td>
          </tr>
        </thead>
        <tbody
          class="PodBrowser-table__body"
          role="rowgroup"
        >
          <tr
            class="PodBrowser-table__body-row PodBrowser-table__body-row--selectable"
            tabindex="0"
          >
            <td
              class="PodBrowser-table__body-cell PodBrowser-table__body-cell--align-center PodBrowser-table__body-cell--width-preview"
            >
              <button
                class="PodBrowser-button PodBrowser-button--text PodBrowser-bookmark-button"
                data-testid="bookmark-button"
                disabled=""
                type="button"
              >
                <i
                  alt="bookmark button"
                  aria-label="bookmark"
                  class="PodBrowser-icon-star PodBrowser-bookmark-icon-unselected"
                />
              </button>
            </td>
            <td
              class="PodBrowser-table__body-cell PodBrowser-table__body-cell--align-center PodBrowser-table__body-cell--width-preview"
            >
              <i
                class="PodBrowser-icon-file PodBrowser-resource-icon"
              />
            </td>
            <td
              class="PodBrowser-table__body-cell"
            >
              inbox
            </td>
            <td
              class="PodBrowser-table__body-cell"
            >
              Resource
            </td>
          </tr>
          <tr
            class="PodBrowser-table__body-row PodBrowser-table__body-row--selectable"
            tabindex="0"
          >
            <td
              class="PodBrowser-table__body-cell PodBrowser-table__body-cell--align-center PodBrowser-table__body-cell--width-preview"
            >
              <button
                class="PodBrowser-button PodBrowser-button--text PodBrowser-bookmark-button"
                data-testid="bookmark-button"
                disabled=""
                type="button"
              >
                <i
                  alt="bookmark button"
                  aria-label="bookmark"
                  class="PodBrowser-icon-star PodBrowser-bookmark-icon-unselected"
                />
              </button>
            </td>
            <td
              class="PodBrowser-table__body-cell PodBrowser-table__body-cell--align-center PodBrowser-table__body-cell--width-preview"
            >
              <i
                class="PodBrowser-icon-file PodBrowser-resource-icon"
              />
            </td>
            <td
              class="PodBrowser-table__body-cell"
            >
              private
            </td>
            <td
              class="PodBrowser-table__body-cell"
            >
              Resource
            </td>
          </tr>
          <tr
            class="PodBrowser-table__body-row PodBrowser-table__body-row--selectable"
            tabindex="0"
          >
            <td
              class="PodBrowser-table__body-cell PodBrowser-table__body-cell--align-center PodBrowser-table__body-cell--width-preview"
            >
              <button
                class="PodBrowser-button PodBrowser-button--text PodBrowser-bookmark-button"
                data-testid="bookmark-button"
                disabled=""
                type="button"
              >
                <i
                  alt="bookmark button"
                  aria-label="bookmark"
                  class="PodBrowser-icon-star PodBrowser-bookmark-icon-unselected"
                />
              </button>
            </td>
            <td
              class="PodBrowser-table__body-cell PodBrowser-table__body-cell--align-center PodBrowser-table__body-cell--width-preview"
            >
              <i
                class="PodBrowser-icon-file PodBrowser-resource-icon"
              />
            </td>
            <td
              class="PodBrowser-table__body-cell"
            >
              note.txt
            </td>
            <td
              class="PodBrowser-table__body-cell"
            >
              Resource
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <section
      class="PodBrowser-drawer"
    >
      <div
        class="PodBrowser-drawer__content"
      >
        <div
          class="PodBrowser-drawer__content-wrapper"
        >
          <div
            class="PodBrowser-drawer__article"
          >
            <button
              class="PodBrowser-button PodBrowser-button--text"
            >
              <span
                class="PodBrowser-icon-cancel"
              />
               Close
            </button>
          </div>
          <section
            class="PodBrowser-centeredSection"
          >
            <h3
              class="PodBrowser-content-h3"
              title=""
            >
              null
            </h3>
          </section>
          <hr
            class="PodBrowser-root"
          />
          <div
            class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
          >
            <svg
              class="PodBrowser-loading-indicator"
              viewBox="22 22 44 44"
            >
              <circle
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Container view renders Access Forbidden if the fetch for container returns 401 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
  >
    <svg
      class="PodBrowser-loading-indicator"
      viewBox="22 22 44 44"
    >
      <circle
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Container view renders Access Forbidden if the fetch for container returns 403 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
  >
    <svg
      class="PodBrowser-loading-indicator"
      viewBox="22 22 44 44"
    >
      <circle
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Container view renders Access Forbidden if the fetch for container returns 404 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
  >
    <svg
      class="PodBrowser-loading-indicator"
      viewBox="22 22 44 44"
    >
      <circle
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Container view renders Not Supported if resource loaded is not a container 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-page-header"
  >
    <h1
      class="PodBrowser-page-header__title"
    >
      Resource Not Supported
    </h1>
    <div
      class="PodBrowser-page-header__content"
    />
    <div
      class="PodBrowser-page-header__toolbar"
    />
  </div>
  <div
    class="PodBrowser-container"
  >
    <div
      class="PodBrowser-content"
    >
      <p>
        PodBrowser can only show resources that are Solid containers.
      </p>
      <p>
        <span>
          Navigate to the resource directly (this will navigate away from PodBrowser): 
        </span>
        <a />
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container view renders Not supported if the fetch for container returns 500 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-loading-indicator-container PodBrowser-loading-indicator-container--center"
  >
    <svg
      class="PodBrowser-loading-indicator"
      viewBox="22 22 44 44"
    >
      <circle
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;
